# tutorials

./: .gitignore  ASDF_and_World_Coordinate_Systems.ipynb  Anatomy of a ASDF file.ipynb  Anatomy_of_an_ASDF_file.ipynb  Basics of reading ASDF files.ipynb  High level introduction to ASDF.ipynb  High_Level_Introduction_to_ASDF.ipynb  README.md  Reading_a_JWST_ASDF_file.ipynb  Validation_and_Dealing_with_Errors.ipynb  Your_first_ASDF_converter.ipynb  Your_second_ASDF_converter.ipynb  environment.yml  requirements.txt  tox.ini
.github/workflows/: ci.yml  test.yml
notebooks/: High_Level_Introduction_to_ASDF.ipynb  Validation_and_Dealing_with_Errors.ipynb  Your_first_ASDF_converter.ipynb  Your_second_ASDF_converter.ipynb
notebooks/Your_first_ASDF_converter/: pyproject.toml
notebooks/Your_first_ASDF_converter/src/mfconverter/: converter.py  extensions.py  photo_id.py
notebooks/Your_second_ASDF_converter/: pyproject.toml
notebooks/Your_second_ASDF_converter/src/myconverters/: converters.py  extensions.py  integration.py  photo_id.py  traffic_citation.py
notebooks/Your_second_ASDF_converter/src/myschemas/: integration.py
notebooks/Your_second_ASDF_converter/src/myschemas/resources/manifests/: allmyschemas-1.0.yaml
notebooks/Your_second_ASDF_converter/src/myschemas/resources/schemas/: photo_id-1.0.0.yaml  traffic_citation-1.0.0.yaml
